--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
             <groupId>com.intellij</groupId>
             <artifactId>annotations</artifactId>
             <version>12.0</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
