--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     </parent>
 
     <artifactId>smoothie-map</artifactId>
-    <version>1.2</version>
+    <version>1.3-SNAPSHOT</version>
     <name>SmoothieMap</name>
     <description>SmoothieMap is a java.util.Map implementation with worst put(k, v) operation
         latencies more than 100 times smaller than in ordinary hash table implementations like
@@ -106,7 +106,7 @@
         <connection>scm:git:git@github.com:OpenHFT/SmoothieMap.git</connection>
         <developerConnection>scm:git:git@github.com:OpenHFT/SmoothieMap.git
         </developerConnection>
-        <tag>smoothie-map-1.2</tag>
+        <tag>master</tag>
     </scm>
 
 </project>
