Configure Xmx for gradle tests

--- a/build.gradle
+++ b/build.gradle
@@ -142,6 +142,11 @@ forbiddenApis {
 //    ]
 //}
 
+test {
+    // Some of the tests create giant SmoothieMaps, e. g. GrowTest
+    maxHeapSize = "4g"
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
