Add moveToMapWithShrunkArray compilation flag to avoid non-null checks of segmentsArray

--- a/build.gradle
+++ b/build.gradle
@@ -119,6 +119,7 @@ tasks.withType(io.timeandspace.jpsg.JpsgTask) {
     with 'Tracking hashCodeDistribution'
     with 'Flag doShrink'
     with 'Tracking segmentOrderStats'
+    with 'Disabled moveToMapWithShrunkArray'
 }
 
 import net.ltgt.gradle.errorprone.CheckSeverity
