--- a/build.gradle
+++ b/build.gradle
@@ -122,7 +122,7 @@ tasks.withType(io.timeandspace.jpsg.JpsgTask) {
     with 'Tracking segmentOrderStats'
     with 'Disabled moveToMapWithShrunkArray'
     with 'Interleaved segments'
-    with 'Supported intermediateSegments'
+    with 'NotSupported intermediateSegments'
 
     exclude 'Continuous segments'
 }
