--- a/build.gradle
+++ b/build.gradle
@@ -37,14 +37,17 @@ dependencies {
     annotationProcessor "com.google.auto.value:auto-value:$autoValueVersion"
     annotationProcessor 'net.ltgt.gradle.incap:incap:0.2'
 
-    def junitVersion = '5.4.1'
+    def junitVersion = '5.5.2'
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 
     testImplementation 'com.google.guava:guava:28.1-jre'
     testImplementation 'com.google.guava:guava-testlib:28.1-jre'
     testImplementation 'org.apache.commons:commons-math3:3.2'
     testImplementation 'net.openhft:zero-allocation-hashing:0.8'
+    testImplementation 'org.hamcrest:hamcrest-library:2.1'
+    testImplementation 'one.util:streamex:0.7.0'
 
     errorprone 'com.google.errorprone:error_prone_core:2.3.3'
     errorproneJavac 'org.codehaus.plexus:plexus-compiler-javac-errorprone:2.8.5'
