--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,15 @@
                     <scmBranch>gh-pages</scmBranch>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <!-- Workaround for https://bugs.openjdk.java.net/browse/JDK-8212233 -->
+                    <source>8</source>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
