--- a/build.gradle
+++ b/build.gradle
@@ -195,14 +195,38 @@ test {
     maxHeapSize = "4g"
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar) {
+    classifier 'javadoc'
+    from javadoc
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
             from components.java
             artifactId = 'smoothie-map'
+            artifact sourcesJar
+            artifact javadocJar
             pom {
                 name = 'SmoothieMap 2'
                 inceptionYear = '2018'
+                licenses {
+                    license {
+                        name = 'The Apache Software License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        distribution = 'repo'
+                    }
+                }
+                scm {
+                    url = 'https://github.com/TimeAndSpaceIO/SmoothieMap'
+                    connection = 'scm:git:git://github.com/TimeAndSpaceIO/SmoothieMap.git'
+                    developerConnection = 'scm:git:ssh://github.com/TimeAndSpaceIO/SmoothieMap.git'
+                }
                 developers {
                     developer {
                         id = 'leventov'
@@ -211,8 +235,34 @@ publishing {
                         url = 'https://timeandspace.io'
                     }
                 }
+                issueManagement {
+                    system = 'GitHub'
+                    url = 'https://github.com/TimeAndSpaceIO/SmoothieMap/issues'
+                }
             }
         }
+    }
+    ext {
+        if (!project.hasProperty('sonatypeUrl'))
+            sonatypeUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2'
+        if (!project.hasProperty('sonatypeUsername')) sonatypeUsername = ''
+        if (!project.hasProperty('sonatypePassword')) sonatypePassword = ''
+    }
+    repositories {
+        maven {
+            url = sonatypeUrl
+            credentials {
+                username = sonatypeUsername
+                password = sonatypePassword
+            }
+        }
+    }
+
+    ext.isReleaseVersion = !version.endsWith('SNAPSHOT')
+
+    signing {
+        required { isReleaseVersion && gradle.taskGraph.hasTask('publish') }
+        sign publishing.publications.mavenJava
     }
 }
 
