--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 }
 
 group = 'io.timeandspace'
-version = '2.0.1'
+version = '2.1-SNAPSHOT'
 description = 'SmoothieMap'
 sourceCompatibility = '1.8'
 
