Rename 'Protecting null comparisons' to 'If-enabled null comparison'

--- a/build.gradle
+++ b/build.gradle
@@ -125,7 +125,7 @@ tasks.withType(io.timeandspace.jpsg.JpsgTask) {
     // Extra checks that keys and values are non-null specifically upon reading from the
     // SmoothieMap's memory. They might be nearly (or completely) free if a certain combination of
     // JVM and GC algorithm doesn't access object's memory on a null check (see
-    // [Protecting null comparisons]). On the other hand, the benefit from enabling these checks is
+    // [If-enabled null comparison]). On the other hand, the benefit from enabling these checks is
     // also small - perhaps just replacing NPEs with CMEs and throwing them earlier, which may make
     // investigation of some bugs easier.
     with 'Disabled extraConcurrencyChecks'
