--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ dependencies {
 }
 
 group = 'io.timeandspace'
-version = '2.0.2'
+version = '2.1-SNAPSHOT'
 description = 'SmoothieMap'
 sourceCompatibility = '1.8'
 
